--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ input:focus{
     box-shadow: 0px 0px 2px 2px rgb(160, 198, 230);
 }
 
-input[type=text], input[type=email], input[type=number], input[type=password] {
+input[type=text], input[type=email], input[type=tel], input[type=password] {
     padding: 12px 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -95,6 +95,7 @@ button{
     border-radius: 4px;
     font-size: 1rem;
     font-weight: 550;
+    cursor: pointer;
 }
 
 .smallRegister{
